--- a/app/views/story_levels/_victory_modal.html.erb
+++ b/app/views/story_levels/_victory_modal.html.erb
@@ -25,8 +25,8 @@
             </div>
 
             <div class="stat-item">
-              <div class="stat-value"><%=  %></div>
-              <div class="stat-label">Current Level</div>
+              <div class="stat-value"><%= @incorrect_answers %></div>
+              <div class="stat-label">Incorrect Answers</div>
             </div>
           </div>
         </div>
