added lots of animations and styling to jthe victory modal

--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -98,6 +98,9 @@
 .btn-victory{
   background-color: $accent-gold;
   color: black;
+  &:hover {
+    background-color: $accent-gold-glow;
+  }
 }
 
 .btn-primary {
