--- a/app/views/story_levels/_victory_modal.html.erb
+++ b/app/views/story_levels/_victory_modal.html.erb
@@ -2,14 +2,14 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content victory-modal">
       <div class="modal-body text-center p-5">
-        <h1 class="victory-title mb-4">
+        <div class="victory-title mb-4">
           <%= image_tag "character-sprites/Samurai/player_character.png", alt: "Player Character", class: "player-sprite" %>
           <%= image_tag "enemy-images/dead_shroom.png", alt: "dead-shroom", class: "player-sprite dead-shroom" %>
-        </h1>
+        </div>
 
         <div class="victory-stats mb-4">
           <h3>Congratulations!</h3>
-          <p class="lead">You've conquered the first map!</p>
+          <p class="lead">Map 1 : Conquered</p>
 
           <div class="stats-grid mt-4">
             <div class="stat-item">
