--- a/app/assets/stylesheets/theme1/results.scss
+++ b/app/assets/stylesheets/theme1/results.scss
@@ -94,19 +94,19 @@
 }
 
 .enemy-result-sprite {
-  transform: scaleX(-1);
+  transform: translateX(2px) translateY(5px);
 }
 
 .enemy-defeated {
-  transform: rotate(-270deg) translateX(8px) translateY(-6px);
+  transform: rotate(-270deg) translateX(10px) translateY(-6px);
   opacity: 0.7;
-  filter: grayscale(30%);
+  filter: grayscale(20%);
 }
 
 .player-defeated {
-  transform: rotate(270deg);
+  transform: rotate(270deg) translateX(-16px) translateY(4px);
   opacity: 0.7;
-  filter: grayscale(30%);
+  filter: grayscale(20%);
 }
 
 .character-label {
@@ -414,7 +414,7 @@
 }
 
 .result-sprite.celebrate {
-  animation: celebrate 0.8s ease-out;
+  animation: celebrate 1s ease-out 4;
 }
 
 // Mobile adjustments
