--- a/app/assets/stylesheets/theme1/map.scss
+++ b/app/assets/stylesheets/theme1/map.scss
@@ -154,11 +154,11 @@
 
 .map-player-sprite {
   position: absolute;
-  right: calc(100% + 16px);
+  right: calc(90%);
   top: 80px;
   transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   object-fit: contain;
   filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.6));
   animation: map-player-idle 2s ease-in-out infinite;
