--- a/app/assets/stylesheets/theme1/map.scss
+++ b/app/assets/stylesheets/theme1/map.scss
@@ -514,7 +514,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 80px;
+  min-height: 80px;
+  padding-bottom: env(safe-area-inset-bottom);
   background: $gray-800;
   display: flex;
   justify-content: space-around;
