--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -7,8 +7,8 @@
 
 // If we need a card
 .card {
-  background-color: $gray-800;
-  border: 1px solid $gray-700;
+  background-color: $gray-700;
+  border: 1px solid $gray-600;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   &.profile-card {
@@ -22,7 +22,32 @@
     color: $gray-300;
     font-weight: bold;
     margin-bottom: 0.5rem;
-    font-size: 1rem;
+    font-size: clamp(1.3rem, 4vw, 3rem);
+  }
+
+  .form-select {
+    font-size: clamp(1.3rem, 4vw, 3rem); // adjust as needed
+  }
+
+}
+
+.fight-index-page {
+  display: flex;
+  flex-direction: column;
+
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("book_pattern.jpg");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.1;
+    z-index: -1;
+    filter: contrast(3);
   }
 }
 
