--- a/app/assets/stylesheets/theme1/victory.scss
+++ b/app/assets/stylesheets/theme1/victory.scss
@@ -106,8 +106,9 @@
   gap: 2rem;
   min-height: 200px;
   margin-bottom: 2rem;
+  padding: 3rem 3rem;
 
-  .player-sprite {
+  .victory-player-sprite {
     height: 20vh;
     max-height: 100%;
     max-width: 100%;
