--- a/app/views/story_levels/_victory_modal.html.erb
+++ b/app/views/story_levels/_victory_modal.html.erb
@@ -3,8 +3,8 @@
     <div class="modal-content victory-modal">
       <div class="modal-body text-center p-5">
         <div class="victory-title mb-4">
-          <%= image_tag "character-sprites/Samurai/player_character.png", alt: "Player Character", class: "player-sprite" %>
-          <%= image_tag "enemy-images/dead_shroom.png", alt: "dead-shroom", class: "player-sprite dead-shroom" %>
+          <%= image_tag "character-sprites/Samurai/player_character.png", alt: "Player Character", class: "victory-player-sprite" %>
+          <%= image_tag "enemy-images/dead_shroom.png", alt: "dead-shroom", class: "victory-player-sprite dead-shroom" %>
         </div>
 
         <div class="victory-stats mb-4">
