--- a/app/assets/stylesheets/theme1/victory.scss
+++ b/app/assets/stylesheets/theme1/victory.scss
@@ -108,8 +108,8 @@
   margin-bottom: 2rem !important;
 
   .victory-player-sprite {
-    height: 25vh;
-    max-width: 150px;
+    height: 1vh;
+    max-width: 100px;
     object-fit: contain;
     animation: bounceIn 0.7s cubic-bezier(0.68, -0.55, 0.265, 1.55),
                float 3s ease-in-out infinite 0.7s;
@@ -140,28 +140,42 @@
     filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3));
     image-rendering: pixelated;
 
-    &:nth-child(1) {
+     &:nth-child(1) {
       top: 15%;
-      left: 10%;
+      left: 15%;
       animation-delay: 0.3s, 1s;
     }
 
     &:nth-child(2) {
       top: 5%;
-      right: 35%;
+      left: 40%;
       animation-delay: 0.5s, 1.3s;
     }
 
     &:nth-child(3) {
-      top: 15%;
-      right: 10%;
+      top: 10%;
+      right: 15%;
       animation-delay: 0.7s, 1.6s;
     }
 
     &:nth-child(4) {
-      bottom: 10%;
-      right: 5%;
+      bottom: 15%;
+      right: 10%;
       animation-delay: 0.9s, 1.9s;
+    }
+
+    &:nth-child(5) {
+      bottom: 25%;
+      left: 0%;
+      animation-delay: 1.1s, 2.2s;
+      height: 6vh;
+    }
+
+    &:nth-child(6) {
+      bottom: 5%;
+      left: 35%;
+      animation-delay: 1.3s, 2.5s;
+      height: 6vh;
     }
   }
 }
